--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
                             <div class="database__form--item">
                                 <div class="database__form--item-body search-list-wrapper">
                                     <label class="database__label">
-                                        <input type="text" name="name" placeholder="Name" autocomplete="off" required class="database__input search-list-input">
+                                        <input type="text" name="name" placeholder="Name" autocomplete="off" class="database__input search-list-input">
                                     </label>
                                     <div class="database__search-list search-list">
                                         <ul>
