--- a/app/person.html
+++ b/app/person.html
@@ -694,10 +694,10 @@
                             </h3>
                             <div class="articles__filter--item-row">
                                 <label class="articles__filter--label custom-date">
-                                    <input type="text" name="start-date" placeholder="Start date" class="articles__filter--date custom-date__input">
+                                    <input type="text" name="start-date" autocomplete="off" placeholder="Start date" class="articles__filter--date custom-date__input">
                                 </label>
                                 <label class="articles__filter--label custom-date">
-                                    <input type="text" name="end-date" placeholder="Period end date" class="articles__filter--date custom-date__input">
+                                    <input type="text" name="end-date" autocomplete="off" placeholder="Period end date" class="articles__filter--date custom-date__input">
                                 </label>
                             </div>
                         </div>
