--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,9 @@
                                                 Lorem ipsum dolor
                                             </li>
                                             <li>
+                                                Lorem ipsum dolor
+                                            </li>
+                                            <li>
                                                 Lorem
                                             </li>
                                             <li>
@@ -73,7 +76,7 @@
                                     <div class="database__search-list search-list">
                                         <ul>
                                             <li>
-                                                Lorem ipsum dolor
+                                                Lorem ipsum
                                             </li>
                                             <li>
                                                 Lorem
