--- a/app/index.html
+++ b/app/index.html
@@ -139,7 +139,7 @@
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
@@ -149,7 +149,7 @@
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
@@ -159,7 +159,7 @@
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
@@ -169,7 +169,7 @@
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
@@ -179,7 +179,7 @@
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
@@ -189,7 +189,27 @@
                                     Tag1
                                 </div>
                             </li>
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                                <div class="tag-cloud__item--body">
+                                    Tag1
+                                </div>
+                            </li>
                             <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                                <div class="tag-cloud__item--body">
+                                    Tag1
+                                </div>
+                            </li>
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                                <div class="tag-cloud__item--body">
+                                    Tag1
+                                </div>
+                            </li>
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                                <div class="tag-cloud__item--body">
+                                    Tag1
+                                </div>
+                            </li>
+                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
