--- a/app/person.html
+++ b/app/person.html
@@ -687,7 +687,7 @@
                         <button class="articles__slider--arrow swiper-button-prev"></button>
                         <button class="articles__slider--arrow swiper-button-next"></button>
                     </div>
-                    <form action="#" class="articles__filter">
+                    <form action="#" class="articles__filter" data-aos="fade-in" data-aos-delay="600">
                         <div class="articles__filter--item">
                             <h3 class="articles__filter--title">
                                 Period of publication:
