--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
                             <div class="sec"></div>
                             <div class="sec"></div>
                         </div>
-                        <span class="decor-letters">
+                        <span class="decor-letters _right">
                             <span>d</span>
                             <span>a</span>
                             <span>t</span>
@@ -125,82 +125,82 @@
                     </h2>
                     <div class="tag-cloud__block swiper" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="400" data-aos-anchor=".tag-cloud">
                         <ul class="tag-cloud__list swiper-wrapper">
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Tag2, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
                             </li>
-                            <li class="tag-cloud__item swiper-slide" data-text="Tag1, Lorem ipsum dolor, Tag3, Tag4, Tag5" data-index="0">
+                            <li class="tag-cloud__item swiper-slide">
                                 <div class="tag-cloud__item--body">
                                     Tag1
                                 </div>
