--- a/app/html/_header.html
+++ b/app/html/_header.html
@@ -30,7 +30,7 @@
 								<!-- NEW -->
 							</div>
 							<div class="header__nav--block">
-								<ul class="header__nav--list">
+								<ul class="header__nav--list" style="--delay: 0s;">
 									<li class="header__nav--item" style="animation-delay: 0.5s;">
 										<a href="#" class="header__nav--link" data-number="00" data-text="Home">
 											Home
