--- a/app/html/_subs-card.html
+++ b/app/html/_subs-card.html
@@ -101,6 +101,9 @@
             <a href="#" class="personal-area__subscriptions-card--btn">
                 Buy
             </a>
+            <a href="#" class="personal-area__subscriptions-card--btn _transparent">
+                Save
+            </a>
         </div>
     </div>
 </li>
