--- a/app/personal-area-my-subscriptions.html
+++ b/app/personal-area-my-subscriptions.html
@@ -120,12 +120,22 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="personal-area__my-subscriptions--footer" data-aos="fade-in" data-aos-delay="600">
+                                <div class="personal-area__my-subscriptions--footer" data-aos="fade-in" data-aos-delay="600" data-aos-anchor=".personal-area__my-subscriptions">
+                                    <div class="personal-area__my-subscriptions--footer-block">
+                                        <a href="#" class="personal-area__my-subscriptions--btn btn _light">
+                                            Choose another subscription
+                                        </a>
+                                    </div>
                                     <a href="#" class="personal-area__my-subscriptions--btn btn _light">
-                                        Choose another subscription
+                                        Delete current subscription
                                     </a>
                                     <a href="#" class="personal-area__my-subscriptions--btn btn">
                                         Renew your subscription
+                                    </a>
+                                </div>
+                                <div class="personal-area__my-subscriptions--footer _center" data-aos="fade-in" data-aos-delay="400" data-aos-anchor=".personal-area__my-subscriptions">
+                                    <a href="#" class="personal-area__my-subscriptions--btn btn">
+                                        Save
                                     </a>
                                 </div>
                             </div>
